<resources>
    <string name="app_name">Starstec</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stresstest">You haven\'t checked your \nstress level yet!</string>
    <string name="ppgtext">Don’t know how to check the Blood Preasure using Starstec?</string>
    <string name="watchppg">Watch help video now!</string>
    <string name="edatext">Don’t know how to check the Electrodermal Activity using Starstec?</string>
    <string name="healthy">Healthy Life, Stay Productive,\nImprove Your Gaming !</string>
    <string name="meditation">Come on, start your journey towards peace and balance with meditation! By allocating a little time each day for meditation, you will discover tranquility within yourself and overcome the overwhelming stress</string>
    <string name="meditasimindfulness">Teknik meditasi ini berasal dari ajaran Buddha dan memang paling populer.\nSaat melakukan ini, kamu perlu memerhatikan pikiran yang melewati...</string>
    <string name="stressdetect">curious how we interpret hrv and scr to detect stress ?</string>
    <string name="send_success">Berhasil terkirim</string>
    <string name="send_error">Gagal terkirim</string>
    <string name="eda">Do you want to express your emotions more deeply and understand yourself better? Try using an EDA sensor! Come on, start your journey of self-discovery with an EDA sensor!</string>
    <string name="ppg">Want to take control of your health? Try using a PPG Sensor. Get a PPG Sensor now and embark on a journey towards a healthier and happier life!</string>
    <string name="consultation">Level up your gaming experience with our consultation with expert !</string>


    <string name="output_hint">
        Please place your finger on the device\'s camera, covering the flash as well. After
        10 seconds, you can export the results through the menu.
        \n\nThis utility works by measuring the amount of red it sees through the camera, and
        attempting to detect the fluctuations.
        \nIt works better in a darkened room, and when the pressure on the camera is constant.
        \nIf there are multiple cameras on your device, make sure that your finger covers the entire
        field of view in the small viewfinder.
        \nOnce the measurement is complete, it can be exported or repeated through the menu.
    </string>
    <string name="output_header_template">Heart rate on %s</string>
    <string name="output_detected_peaks_header">Detected Peaks:</string>
    <string name="send_output_to">Send output to:</string>
    <string name="separator">,</string>
    <string name="row_separator">\n</string>
    <string name="raw_values">Measurements (Timestamp, Value)</string>
    <string name="cameraPermissionRequired">Camera permission is required for this application to work.</string>
    <string name="noFlashWarning">Measurement without flash is less reliable.</string>
    <string name="new_measurement">New Measurement</string>
    <string name="export_result">Export Result</string>
    <string name="export_details">Export Details</string>
    <string name="dateFormat">yyyy-MM-dd\'T\'HH:mm:ssZZZZZ</string>
    <string name="dateFormatGranular">yyyy-MM-dd\'T\'HH:mm:ss.SSSZZZZZ</string>
    <string name="camera_not_found">Camera not available.</string>
    <plurals name="measurement_output_template" translatable="false">
        <item quantity="zero">Pulse: %2.1f (%d cycle in %2.1f seconds)</item>
        <item quantity="one">Pulse: %2.1f (%d cycle in %2.1f seconds)</item>
        <item quantity="other">Pulse: %2.1f (%d cycles in %2.1f seconds)</item>
    </plurals>
</resources>