<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.DashboardFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/logout"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="right"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/logout" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:src="@drawable/starsteclogo" />


            </FrameLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivuser"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:src="@drawable/profiledashboard" />

            <TextView
                android:id="@+id/tvuser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/poppins"
                android:text="Richa Varyan"
                android:textSize="15sp" />

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center"-->
<!--                android:layout_marginStart="10dp"-->
<!--                android:fontFamily="@font/poppins"-->
<!--                android:text="(Connected)"-->
<!--                android:textSize="10sp" />-->


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/stressdetectsensorcard"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/card">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="90dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="50dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:text="@string/stresstest"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/realtimedetection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/realtime" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textStyle="bold"
                android:text="Realtime" />

        </LinearLayout>



        <LinearLayout
            android:id="@+id/offline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/offline" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textStyle="bold"
                android:text="Offline" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/perceived"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/perceived" />

            <TextView
                android:textStyle="bold"
                android:fontFamily="@font/poppins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Perceived" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/flaslight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/flaslight" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textStyle="bold"
                android:text="Flaslight" />

        </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="Features"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/ppgsensorcard"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginBottom="20dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center|left|top"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/ppg" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_gravity="end|top"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/circle_background_blink" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="289dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|left|top"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="60dp"
                        android:fontFamily="@font/poppins"
                        android:text="PPG Sensor" />

                    <TextView
                        android:layout_width="320dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|left|top"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="1dp"
                        android:fontFamily="@font/poppins"
                        android:maxLines="2"
                        android:text="@string/ppg"
                        android:textSize="10sp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/edasensorcard"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginBottom="20dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center|left|top"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/eda" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_gravity="end|top"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/circlebackground" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="289dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|left|top"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="60dp"
                        android:fontFamily="@font/poppins"
                        android:text="EDA Sensor" />

                    <TextView
                        android:layout_width="320dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|left|top"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="1dp"
                        android:fontFamily="@font/poppins"
                        android:maxLines="2"
                        android:text="@string/eda"
                        android:textSize="10sp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/meditation"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginBottom="20dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center|left|top"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/meditation" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="289dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|left|top"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="60dp"
                        android:fontFamily="@font/poppins"
                        android:text="Meditation" />

                    <TextView
                        android:layout_width="320dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|left|top"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="1dp"
                        android:fontFamily="@font/poppins"
                        android:maxLines="2"
                        android:text="@string/meditation"
                        android:textSize="10sp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/consultation"
                android:layout_width="match_parent"
                android:layout_height="120dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center|left|top"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/consultation" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="289dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|left|top"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="60dp"
                        android:fontFamily="@font/poppins"
                        android:text="Consultation" />

                    <TextView
                        android:layout_width="320dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|left|top"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="1dp"
                        android:fontFamily="@font/poppins"
                        android:maxLines="2"
                        android:text="@string/consultation"
                        android:textSize="10sp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>


            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

        </LinearLayout>


    </ScrollView>


</LinearLayout>
